# 86Box

./: .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: cmake.yml
cmake/: llvm-win32-arm64.cmake
src/: CMakeLists.txt
src/mac/: CMakeLists.txt
src/win/: CMakeLists.txt
src/win/languages/: fr-FR.rc
